Changed all links

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			</div>
 			<div class="grid-item">
 				<div class="card">
-					<div class="cover-image" style="background-image: url('/img/cover/ryukishi.jpg')"></div>
+					<div class="cover-image" style="background-image: url('img/cover/ryukishi.jpg')"></div>
 					<div class="card-text">
 						<h3>Saikyou Shoku &lt;Ryukishi&gt; Kara Shokyu Shoku &lt;Hakobiya&gt; Ni Nattano Ni, Naze Ka
 							Yushatachi Kara Tayoraretemasu</h3>
@@ -75,7 +75,7 @@
 		<div class="grid" id="completed">
 			<div class="grid-item">
 				<div class="card">
-					<div class="cover-image" style="background-image: url('/img/cover/inuneko.jpg')"></div>
+					<div class="cover-image" style="background-image: url('img/cover/inuneko.jpg')"></div>
 					<div class="card-text">
 						<h3>Inugami-san to Nekoyama-san</h3>
 						<div class="chip-row">
@@ -87,7 +87,7 @@
 			</div>
 			<div class="grid-item">
 				<div class="card">
-					<div class="cover-image" style="background-image: url('/img/cover/geist.jpg')"></div>
+					<div class="cover-image" style="background-image: url('img/cover/geist.jpg')"></div>
 					<div class="card-text">
 						<h3>Geist x Revenant</h3>
 						<div class="chip-row">
@@ -104,7 +104,7 @@
 		<div class="grid" id="dropped">
 			<div class="grid-item">
 				<div class="card">
-					<div class="cover-image" style="background-image: url('/img/cover/ijimekaeshi.jpg')"></div>
+					<div class="cover-image" style="background-image: url('img/cover/ijimekaeshi.jpg')"></div>
 					<div class="card-text">
 						<h3>Ijimekaeshi. -Fukushuu no 31-</h3>
 						<div class="chip-row">
@@ -117,7 +117,7 @@
 			</div>
 			<div class="grid-item">
 				<div class="card">
-					<div class="cover-image" style="background-image: url('/img/cover/otome.jpg')"></div>
+					<div class="cover-image" style="background-image: url('img/cover/otome.jpg')"></div>
 					<div class="card-text">
 						<h3>The Otome Heroine's Fight for Survival</h3>
 						<div class="chip-row">
