Fixed another link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			</div>
 			<div class="grid-item">
 				<div class="card">
-					<div class="cover-image" style="background-image: url('/img/cover/daishinyou.jpg')"></div>
+					<div class="cover-image" style="background-image: url('img/cover/daishinyou.jpg')"></div>
 					<div class="card-text">
 						<h3>Daishinyou</h3>
 						<div class="chip-row">
