Made images clickable

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="grid" id="current">
 			<div class="grid-item">
 				<div class="card">
-					<div class="cover-image" style="background-image: url('img/cover/motoansatsusha.jpg')"></div>
+					<a href="https://mangadex.org/title/0a29b87c-f6eb-4e6d-98b4-3cd8adb3ab8f/moto-ansatsusha-tensei-shite-kizoku-no-reijou-ni-narimashita" class="cover-image" style="background-image: url('img/cover/motoansatsusha.jpg')"></a>
 					<div class="card-text">
 						<h3>Moto Ansatsusha, Tensei Shite Kizoku no Reijou ni Narimashita</h3>
 						<div class="chip-row">
@@ -45,7 +45,7 @@
 			</div>
 			<div class="grid-item">
 				<div class="card">
-					<div class="cover-image" style="background-image: url('img/cover/daishinyou.jpg')"></div>
+					<a href="https://mangadex.org/title/b5800753-fc4b-454a-bf17-02fef8717687/best-friends" class="cover-image" style="background-image: url('img/cover/daishinyou.jpg')"></a>
 					<div class="card-text">
 						<h3>Daishinyou</h3>
 						<div class="chip-row">
@@ -57,7 +57,7 @@
 			</div>
 			<div class="grid-item">
 				<div class="card">
-					<div class="cover-image" style="background-image: url('img/cover/ryukishi.jpg')"></div>
+					<a href="https://mangadex.org/title/19dfa2f3-0fa9-4272-aeef-b4c59c5d1031/saikyou-shoku-ryukishi-kara-shokyu-shoku-hakobiya-ni-nattano-ni-naze-ka-yushatachi-kara" class="cover-image" style="background-image: url('img/cover/ryukishi.jpg')"></a>
 					<div class="card-text">
 						<h3>Saikyou Shoku &lt;Ryukishi&gt; Kara Shokyu Shoku &lt;Hakobiya&gt; Ni Nattano Ni, Naze Ka
 							Yushatachi Kara Tayoraretemasu</h3>
@@ -75,7 +75,7 @@
 		<div class="grid" id="completed">
 			<div class="grid-item">
 				<div class="card">
-					<div class="cover-image" style="background-image: url('img/cover/inuneko.jpg')"></div>
+					<a href="https://mangadex.org/title/449be401-bcaa-4af7-9a97-44e273a9c371/inugami-san-to-nekoyama-san" class="cover-image" style="background-image: url('img/cover/inuneko.jpg')"></a>
 					<div class="card-text">
 						<h3>Inugami-san to Nekoyama-san</h3>
 						<div class="chip-row">
@@ -87,7 +87,7 @@
 			</div>
 			<div class="grid-item">
 				<div class="card">
-					<div class="cover-image" style="background-image: url('img/cover/geist.jpg')"></div>
+					<a href="https://mangadex.org/title/d8116db3-1416-4984-9cb4-c03e0ee41793/geist-x-revenant-kusozako-mob-na-ore-wa-aibou-no-seirei-o-bishoujo-ni-shinka-sasete-saikyou-ni" class="cover-image" style="background-image: url('img/cover/geist.jpg')"></a>
 					<div class="card-text">
 						<h3>Geist x Revenant</h3>
 						<div class="chip-row">
@@ -104,7 +104,7 @@
 		<div class="grid" id="dropped">
 			<div class="grid-item">
 				<div class="card">
-					<div class="cover-image" style="background-image: url('img/cover/ijimekaeshi.jpg')"></div>
+					<a href="https://mangadex.org/title/239e9cf8-11f5-4cd8-a63b-4b3f74cea9b1/ijimekaeshi-fukushuu-no-31" class="cover-image" style="background-image: url('img/cover/ijimekaeshi.jpg')"></a>
 					<div class="card-text">
 						<h3>Ijimekaeshi. -Fukushuu no 31-</h3>
 						<div class="chip-row">
@@ -117,7 +117,7 @@
 			</div>
 			<div class="grid-item">
 				<div class="card">
-					<div class="cover-image" style="background-image: url('img/cover/otome.jpg')"></div>
+					<a href="https://mangadex.org/title/f30a2fd3-cf2c-4f77-9910-51a908459a82/the-otome-heroine-s-fight-for-survival" class="cover-image" style="background-image: url('img/cover/otome.jpg')"></a>
 					<div class="card-text">
 						<h3>The Otome Heroine's Fight for Survival</h3>
 						<div class="chip-row">
