Added depravity records

--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
 			</div>
 			<div class="grid-item">
 				<div class="card">
+					<a href="https://mangadex.org/title/062e3b40-f43a-423d-b4d4-19b9d21c62bf/furoufushi-shoujo-no-naedoko-ryokouki" class="cover-image" style="background-image: url('img/cover/depravity.jpg')"></a>
+					<div class="card-text">
+						<h3>Furoufushi Shoujo no Naedoko Ryokouki</h3>
+						<div class="chip-row">
+							<h5 class="chip">Translating</h5>
+							<h5 class="chip">Ch. 4.2</h5>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="grid-item">
+				<div class="card">
 					<a href="https://mangadex.org/title/b5800753-fc4b-454a-bf17-02fef8717687/best-friends" class="cover-image" style="background-image: url('img/cover/daishinyou.jpg')"></a>
 					<div class="card-text">
 						<h3>Daishinyou</h3>
