--- a/index.html
+++ b/index.html
@@ -109,6 +109,18 @@
 					</div>
 				</div>
 			</div>
+			<div class="grid-item">
+				<div class="card">
+					<a href="https://mangadex.org/title/3fba7668-7650-4998-8b97-f5c6ed848129/ozanari-dungeon" class="cover-image" style="background-image: url('img/cover/ozanari.jpg')"></a>
+					<div class="card-text">
+						<h3>Ozanari Dungeon</h3>
+						<div class="chip-row">
+							<h5 class="chip">Completed</h5>
+							<h5 class="chip">Ch. 99.5</h5>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="section">
