Added Naozari, Ryutora, and Doumo

--- a/index.html
+++ b/index.html
@@ -99,6 +99,18 @@
 			</div>
 			<div class="grid-item">
 				<div class="card">
+					<a href="https://mangadex.org/title/a94ca603-5a10-4954-bf04-2677187c5bcc/ryuuzaki-san-and-torao-san" class="cover-image" style="background-image: url('img/cover/ryutora.jpg')"></a>
+					<div class="card-text">
+						<h3>Ryuuzaki-san and Torao-san</h3>
+						<div class="chip-row">
+							<h5 class="chip">Completed</h5>
+							<h5 class="chip">Ch. 1</h5>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="grid-item">
+				<div class="card">
 					<a href="https://mangadex.org/title/d8116db3-1416-4984-9cb4-c03e0ee41793/geist-x-revenant-kusozako-mob-na-ore-wa-aibou-no-seirei-o-bishoujo-ni-shinka-sasete-saikyou-ni" class="cover-image" style="background-image: url('img/cover/geist.jpg')"></a>
 					<div class="card-text">
 						<h3>Geist x Revenant</h3>
@@ -149,6 +161,32 @@
 							<h5 class="chip">Ch. 19.9</h5>
 						</div>
 						<p>Reason: Official Translation.</p>
+					</div>
+				</div>
+			</div>
+			<div class="grid-item">
+				<div class="card">
+					<a href="https://mangadex.org/title/1541a23e-fad4-4432-8662-5a013a1530d6/doumo-yuusha-no-chichi-desu-kono-tabi-wa-gusoku-ga-gomeiwaku-wo-kakete-moushiwake-arimasen" class="cover-image" style="background-image: url('img/cover/doumo.jpg')"></a>
+					<div class="card-text">
+						<h3>Doumo, Yuusha no Chichi desu. 〜Kono Tabi wa Gusoku ga Gomeiwaku wo Kakete, Moushiwake Arimasen〜</h3>
+						<div class="chip-row">
+							<h5 class="chip">Dropped</h5>
+							<h5 class="chip">Ch. 4.2</h5>
+						</div>
+						<p>Reason: Not enough time.</p>
+					</div>
+				</div>
+			</div>
+			<div class="grid-item">
+				<div class="card">
+					<a href="https://mangadex.org/title/28590f98-3096-4434-982c-1ee9b0d07100/naozari-dungeon" class="cover-image" style="background-image: url('img/cover/naozari.jpg')"></a>
+					<div class="card-text">
+						<h3>Naozari Dungeon</h3>
+						<div class="chip-row">
+							<h5 class="chip">Dropped</h5>
+							<h5 class="chip">Ch. 9</h5>
+						</div>
+						<p>Reason: Um...</p>
 					</div>
 				</div>
 			</div>
