change reason color

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 							<h5 class="chip">Dropped</h5>
 							<h5 class="chip">Ch. 9</h5>
 						</div>
-						<p>Reason: Story got boring.</p>
+						<p class="reason">Reason: Story got boring.</p>
 					</div>
 				</div>
 			</div>
@@ -160,7 +160,7 @@
 							<h5 class="chip">Dropped</h5>
 							<h5 class="chip">Ch. 19.9</h5>
 						</div>
-						<p>Reason: Official Translation.</p>
+						<p class="reason">Reason: Official Translation.</p>
 					</div>
 				</div>
 			</div>
@@ -173,7 +173,7 @@
 							<h5 class="chip">Dropped</h5>
 							<h5 class="chip">Ch. 4.2</h5>
 						</div>
-						<p>Reason: Not enough time.</p>
+						<p class="reason">Reason: Not enough time.</p>
 					</div>
 				</div>
 			</div>
@@ -186,7 +186,7 @@
 							<h5 class="chip">Dropped</h5>
 							<h5 class="chip">Ch. 9</h5>
 						</div>
-						<p>Reason: Um...</p>
+						<p class="reason">Reason: Um...</p>
 					</div>
 				</div>
 			</div>
