--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<title>DSMH Catalogue</title>
 	<link href="css/style.css" rel="stylesheet">
-	<meta content="" name="description">
+	<meta content="A webpage containing links to all the manga we've translated so far." name="description">
 
 	<meta content="DSMH Catalogue" property="og:title">
 	<meta content="" property="og:type">
@@ -38,7 +38,7 @@
 						<h3>Moto Ansatsusha, Tensei Shite Kizoku no Reijou ni Narimashita</h3>
 						<div class="chip-row">
 							<h5 class="chip">Translating</h5>
-							<h5 class="chip">Ch. 24</h5>
+							<h5 class="chip">Ch. 13.2</h5>
 						</div>
 					</div>
 				</div>
@@ -50,7 +50,7 @@
 						<h3>Furoufushi Shoujo no Naedoko Ryokouki</h3>
 						<div class="chip-row">
 							<h5 class="chip">Translating</h5>
-							<h5 class="chip">Ch. 4.2</h5>
+							<h5 class="chip">Ch. 5.2</h5>
 						</div>
 					</div>
 				</div>
@@ -62,7 +62,7 @@
 						<h3>Daishinyou</h3>
 						<div class="chip-row">
 							<h5 class="chip">Translating</h5>
-							<h5 class="chip">Ch. 24</h5>
+							<h5 class="chip">Ch. 31.5</h5>
 						</div>
 					</div>
 				</div>
@@ -75,7 +75,7 @@
 							Yushatachi Kara Tayoraretemasu</h3>
 						<div class="chip-row">
 							<h5 class="chip">Translating</h5>
-							<h5 class="chip">Ch. 40</h5>
+							<h5 class="chip">Ch. 44</h5>
 						</div>
 					</div>
 				</div>
